# python-lab

api/fastapi/basic/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN_PATTERNS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  tasks.py  test_main.py
api/fastapi/basic/.github/workflows/: ci.yml
api/fastapi/basic/src/: __init__.py
api/fastapi/basic/src/fastapi_basic_example/: README.md  __init__.py  app.py  main.py
api/fastapi/basic/src/fastapi_basic_example/adapters/: README.md
api/fastapi/basic/src/fastapi_basic_example/application/: README.md
api/fastapi/basic/src/fastapi_basic_example/domain/: README.md  constants.py  errors.py  result.py
api/fastapi/basic/src/fastapi_basic_example/infrastructure/: README.md  __init__.py
api/fastapi/basic/src/fastapi_basic_example/ports/: README.md
api/fastapi/basic/tests/: README.md  conftest.py
api/fastapi/basic/tests/e2e/: README.md  test_api.py  test_probe_failures.py
api/fastapi/basic/tests/integration/: README.md  test_api_with_di.py  test_repository_integration.py
api/fastapi/basic/tests/unit/: README.md  test_commands.py  test_dtos.py  test_entities.py  test_errors.py  test_get_item_use_case.py  test_health_service.py  test_health_status_vo.py  test_item_id_vo.py  test_item_repository.py  test_logging_config.py  test_logging_decorator.py  test_logging_middleware.py  test_result.py  test_settings.py  test_value_objects.py
api/fastapi/oauth/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py
api/fastapi/oauth/.github/workflows/: ci.yml
api/fastapi/oauth/src/fastapi_oauth_example/: README.md  app.py  main.py
api/fastapi/oauth/src/fastapi_oauth_example/adapters/: README.md
api/fastapi/oauth/src/fastapi_oauth_example/application/: README.md
api/fastapi/oauth/src/fastapi_oauth_example/domain/: README.md
api/fastapi/oauth/src/fastapi_oauth_example/infrastructure/: README.md
api/fastapi/oauth/src/fastapi_oauth_example/ports/: README.md
api/fastapi/oauth/tests/: conftest.py
api/fastapi/oauth/tests/e2e/: test_health.py
api/fastapi/oauth/tests/integration/: test_auth_routes.py
api/fastapi/oauth/tests/unit/: test_account_lockout.py  test_audit_logger.py  test_database.py  test_dependencies.py  test_dtos.py  test_email_service.py  test_email_verification_use_case.py  test_entities.py  test_jwt_handler.py  test_login_user_use_case.py  test_logout_use_case.py  test_mfa_service.py  test_mfa_use_cases.py  test_password_hasher.py  test_password_reset_use_case.py  test_postgres_user_repository.py  test_rate_limiter.py  test_refresh_token_use_case.py  test_register_user_use_case.py  test_session_use_cases.py  test_settings.py  test_token_blacklist.py  test_token_repositories.py  test_value_objects.py  test_verify_token_use_case.py
mcp/weather-example/: README.md  pyproject.toml  tasks.py
mcp/weather-example/src/weather/: server.py
projects/fastapi/project1/: Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  tasks.py
projects/fastapi/project1/tests/: test_api.py
projects/fastapi/project1_auth/: .env.example  CODE_ANALYSIS.md  DI_OVER_INHERITANCE.md  MIGRATION.md  PERFORMANCE_IMPROVEMENTS.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  REFRESH_TOKEN_IMPLEMENTATION.md  SCALABILITY_ANALYSIS.md  TEST_COVERAGE.md  auth_service.py  dtos.py  exception_handlers.py  interfaces.py  main.py  middleware.py  models.py  output.prof  pyproject.toml  rate_limiter.py  repository.py  service.py
projects/fastapi/project1_auth/docker/: Dockerfile  compose.yaml
projects/fastapi/project1_auth/scripts/: tasks.py
projects/fastapi/project1_auth/src/api/schemas/: auth.py  common.py  items.py
projects/fastapi/project1_auth/src/api/v1/: auth.py  health.py  items.py
projects/fastapi/project1_auth/src/core/: config.py  constants.py  dependencies.py  security.py
projects/fastapi/project1_auth/src/domain/auth/: exceptions.py  models.py  repository.py  (+1 more)
projects/fastapi/project1_auth/src/infrastructure/: database.py
projects/fastapi/project1_auth/tests/integration/: test_api.py
projects/ncaa/: .gitignore  Dockerfile  README-AIRFLOW.md  README-CASABLANCA-DAG.md  README-CASABLANCA.md  README-DAG.md  README.md  a.out  casablanca.md  conftest.py  docker-compose.yml  init-airflow.sh  init-db.sh  main.py  pyproject.toml  tasks.py
projects/ncaa/dags/: ncaa_casablanca_etl_dag.py  ncaa_sports_dag.py  ncaa_sports_etl_dag.py
projects/ncaa/examples/: casablanca_demo.py
projects/ncaa/ncaa/: __init__.py  basketball_service.py  builders.py  casablanca_client.py  casablanca_service.py  config.py  constants.py  container.py  decorators.py  factories.py  game_filters.py  gender_resolver.py  html_fetcher.py  http_client.py  interfaces.py  models.py  observers.py  parser.py  parser_helpers.py  schedule_helpers.py  schedule_service.py  service.py  sport_name_builder.py
projects/ncaa/ncaa/api/: __init__.py  builders.py  client.py  filters.py  helpers.py  models.py  service.py  sport_name_builder.py
projects/ncaa/ncaa/api/services/: __init__.py  basketball.py  schedule.py
projects/ncaa/ncaa/core/: __init__.py  config.py  interfaces.py
projects/ncaa/ncaa/infrastructure/: __init__.py  container.py  decorators.py  factories.py  observers.py
projects/ncaa/ncaa/scraper/: __init__.py  fetcher.py  gender_resolver.py  models.py  parser.py  parser_helpers.py  service.py
projects/ncaa/tests/: test_basketball_service.py  test_builders.py  test_casablanca_client.py  test_casablanca_models.py  test_casablanca_service.py  test_config.py  test_container.py  test_decorators.py  test_filter_chain.py  test_game_filters.py  test_gender_resolver.py  test_html_fetcher.py  test_parser.py  test_parser_helpers.py  test_schedule_helpers.py  test_schedule_service.py  test_service.py
projects/ncaa/tests/api/: test_builders.py  test_filter_chain.py  test_helpers.py  test_service.py
projects/ncaa/tests/infrastructure/: test_container.py  test_decorators.py
projects/ncaa/tests/scraper/: test_gender_resolver.py
(+136 files in other folders)
